--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Sisi's first web page</title>
 </head>
 <body>
-    This is my first web page
+   </p> This is my first web page </p>
+<p> how exciting </p>
 </body>
 </html>
